<resources>
    <string name="app_name">TP2-MMM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--First Fragment Strings-->
    <string name="LastsName">Nom</string>
    <string name="FirstName">Prenom</string>
    <string name="BirthDay">Date de naissance</string>
    <string name="BirthCity">Ville de naissance</string>
    <string name="Validate">Valider</string>
    <string name="validateMSG">Vous avez saisi les informations suivantes :</string>
    <string name="PhoneNum">Phone Number</string>
    <string name="departmentBirth">Departement de Naissance</string>

    <!--Menu-->
    <string name="resetUserData">Reset User Data</string>
    <string name="showPhoneNumb">Show/Hide Phone Number</string>
    <string name="wiki">Wikipedia</string>

    <!-- Second Fragment-->
    <string name="createClient">Nouveau Client</string>

</resources>